# Pitha

./: .env.example  .gitignore  Cargo.toml  README.md  samgraha.toml
.github/workflows/: ci.yml
crates/pitha-core/: Cargo.toml
crates/pitha-core/src/: error.rs  lib.rs  metadata.rs  result.rs  traits.rs  version.rs
crates/pitha-foundation/: Cargo.toml
crates/pitha-foundation/src/: bootstrap.rs  config.rs  error.rs  lib.rs  lifecycle.rs  logging.rs  state.rs
crates/pitha-runtime-cli/: Cargo.toml
crates/pitha-runtime-cli/src/: lib.rs
crates/pitha-runtime-mcp/: Cargo.toml
crates/pitha-runtime-mcp/src/: lib.rs
crates/pitha-storage-core/: Cargo.toml
crates/pitha-storage-core/src/: error.rs  lib.rs  traits.rs
crates/pitha-storage-fs/: Cargo.toml
crates/pitha-storage-fs/src/: lib.rs
crates/pitha-testing/: Cargo.toml
crates/pitha-testing/src/: evidence.rs  fixtures.rs  harness.rs  lib.rs
docs/: phase2-implementation.md  proposal.md
docs/error_list/: 01-vision-gaps.md  02-architecture-gaps.md  03-engineering-gaps.md  04-feature-gaps.md  05-cross-cutting-issues.md  06-structural-optimizations.md  README.md
docs/raw/architecture/: communication.md  component-model.md  constraints.md  crate-architecture.md  data-flow.md  rationale.md  security.md  system-overview.md  trait-design.md
docs/raw/engineering/: build-standards.md  code-standards.md  engineering-principles.md  repository-structure.md  technology-selection.md  testing-standards.md
docs/raw/feature/: application-bootstrap.md  cli-runtime.md  configuration.md  error-handling.md  lifecycle-management.md  logging.md  mcp-runtime.md  state-management.md  storage-abstraction.md  testing-infrastructure.md
docs/raw/feature-technical/: application-bootstrap-technical.md  cli-runtime-technical.md  configuration-technical.md  error-handling-technical.md  lifecycle-management-technical.md  logging-technical.md  mcp-runtime-technical.md  state-management-technical.md  storage-abstraction-technical.md  testing-infrastructure-technical.md
docs/raw/philosophy/: philosophy.md
docs/raw/vision/: vision.md
scripts/: cargo-fmt.ps1  crate-dependency-graph.ps1  feature-family-mapping.ps1  lint-standards.ps1  mapping.yaml  module-boundary-diff.ps1  policy.yaml  traceability-refs-exist.ps1  unsafe-code-scan.ps1
(+20 files in other folders)
